-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 25
-
Component/s: hotspot
-
b09
-
riscv
-
linux
The reason is that we process 8 bytes starting at the first array element for each iteration in the main loop. As a result, we have performance regressions
on platform with slow misaligned memory accesses like Unmatched and Premier P550 SBCs.
- causes
-
JDK-8349428 RISC-V: "bad alignment" with -XX:-AvoidUnalignedAccesses after JDK-8347489
-
- Resolved
-
-
JDK-8351839 RISC-V: Fix base offset calculation introduced in JDK-8347489
-
- Resolved
-
- relates to
-
JDK-8291550 RISC-V: jdk uses misaligned memory access when AvoidUnalignedAccess enabled
-
- Resolved
-
-
JDK-8328404 RISC-V: Fix potential crash in C2_MacroAssembler::arrays_equals
-
- Resolved
-
-
JDK-8305895 Implement JEP 450: Compact Object Headers (Experimental)
-
- Resolved
-
-
JDK-8310268 RISC-V: misaligned memory access in String.Compare intrinsic
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/e91a6ec4
-
Review(master)
openjdk/jdk/23053