8347489: RISC-V: Misaligned memory access with COH