src/hotspot/cpu/riscv/c2_MacroAssembler_riscv.cpp
@@ -1410,6 +1410,9 @@ void C2_MacroAssembler::string_compare(Register str1, Register str2,
   load_chr_insn str1_load_chr = str1_isL ? (load_chr_insn)&MacroAssembler::lbu : (load_chr_insn)&MacroAssembler::lhu;
   load_chr_insn str2_load_chr = str2_isL ? (load_chr_insn)&MacroAssembler::lbu : (load_chr_insn)&MacroAssembler::lhu;
 
+  int base_offset1 = arrayOopDesc::base_offset_in_bytes(T_BYTE);
+  int base_offset2 = arrayOopDesc::base_offset_in_bytes(T_CHAR);
+
   BLOCK_COMMENT("string_compare {");
 
   // Bizarrely, the counts are passed in bytes, regardless of whether they
@@ -1427,6 +1430,24 @@ void C2_MacroAssembler::string_compare(Register str1, Register str2,
   mv(cnt2, cnt1);
   bind(L);
 
+  // Load 4 bytes once to compare for alignment before main loop. Note that this
+  // is only possible for LL/UU case. We need to resort to load_long_misaligned
+  // for both LU and UL cases.
+  if (str1_isL == str2_isL) { // LL or UU
+    beq(str1, str2, DONE);
+    int base_offset = isLL ? base_offset1 : base_offset2;
+    if ((base_offset % 8) != 0) {
+      mv(t0, minCharsInWord / 2);
+      ble(cnt2, t0, SHORT_STRING);
+      lwu(tmp1, Address(str1));
+      lwu(tmp2, Address(str2));
+      bne(tmp1, tmp2, DIFFERENCE);
+      addi(str1, str1, 4);
+      addi(str2, str2, 4);
+      subi(cnt2, cnt2, minCharsInWord / 2);
+    }
+  }
+
   // A very short string
   mv(t0, minCharsInWord);
   ble(cnt2, t0, SHORT_STRING);
@@ -1435,8 +1456,14 @@ void C2_MacroAssembler::string_compare(Register str1, Register str2,
   // load first parts of strings and finish initialization while loading
   {
     if (str1_isL == str2_isL) { // LL or UU
-      // check if str1 and str2 is same pointer
-      beq(str1, str2, DONE);
+#ifdef ASSERT
+      Label align_ok;
+      orr(t0, str1, str2);
+      andi(t0, t0, 0x7);
+      beqz(t0, align_ok);
+      stop("bad alignment");
+      bind(align_ok);
+#endif
       // load 8 bytes once to compare
       ld(tmp1, Address(str1));
       ld(tmp2, Address(str2));
@@ -1453,7 +1480,7 @@ void C2_MacroAssembler::string_compare(Register str1, Register str2,
       sub(cnt2, zr, cnt2);
     } else if (isLU) { // LU case
       lwu(tmp1, Address(str1));
-      ld(tmp2, Address(str2));
+      load_long_misaligned(tmp2, Address(str2), tmp3, (base_offset2 % 8) != 0 ? 4 : 8);
       mv(t0, STUB_THRESHOLD);
       bge(cnt2, t0, STUB);
       subi(cnt2, cnt2, 4);
@@ -1466,7 +1493,7 @@ void C2_MacroAssembler::string_compare(Register str1, Register str2,
       sub(cnt2, zr, cnt2);
       addi(cnt1, cnt1, 4);
     } else { // UL case
-      ld(tmp1, Address(str1));
+      load_long_misaligned(tmp1, Address(str1), tmp3, (base_offset2 % 8) != 0 ? 4 : 8);
       lwu(tmp2, Address(str2));
       mv(t0, STUB_THRESHOLD);
       bge(cnt2, t0, STUB);
@@ -1496,7 +1523,7 @@ void C2_MacroAssembler::string_compare(Register str1, Register str2,
       add(t0, str1, cnt1);
       lwu(tmp1, Address(t0));
       add(t0, str2, cnt2);
-      ld(tmp2, Address(t0));
+      load_long_misaligned(tmp2, Address(t0), tmp3, (base_offset2 % 8) != 0 ? 4 : 8);
       addi(cnt1, cnt1, 4);
       inflate_lo32(tmp3, tmp1);
       mv(tmp1, tmp3);
@@ -1505,7 +1532,7 @@ void C2_MacroAssembler::string_compare(Register str1, Register str2,
       add(t0, str2, cnt2);
       lwu(tmp2, Address(t0));
       add(t0, str1, cnt1);
-      ld(tmp1, Address(t0));
+      load_long_misaligned(tmp1, Address(t0), tmp3, (base_offset2 % 8) != 0 ? 4 : 8);
       inflate_lo32(tmp3, tmp2);
       mv(tmp2, tmp3);
       addi(cnt1, cnt1, 8);
@@ -1661,9 +1688,30 @@ void C2_MacroAssembler::arrays_equals(Register a1, Register a2,
 
   la(a1, Address(a1, base_offset));
   la(a2, Address(a2, base_offset));
+
+  // Load 4 bytes once to compare for alignment before main loop.
+  if ((base_offset % 8) != 0) {
+    addi(cnt1, cnt1, -elem_per_word / 2);
+    bltz(cnt1, TAIL03);
+    lwu(tmp1, Address(a1));
+    lwu(tmp2, Address(a2));
+    addi(a1, a1, 4);
+    addi(a2, a2, 4);
+    bne(tmp1, tmp2, DONE);
+  }
+
   // Check for short strings, i.e. smaller than wordSize.
   subi(cnt1, cnt1, elem_per_word);
   bltz(cnt1, SHORT);
+
+#ifdef ASSERT
+  Label align_ok;
+  orr(t0, a1, a2);
+  andi(t0, t0, 0x7);
+  beqz(t0, align_ok);
+  stop("bad alignment");
+  bind(align_ok);
+#endif
 
   // Main 8 byte comparison loop.
   bind(NEXT_WORD); {
@@ -1730,19 +1778,41 @@ void C2_MacroAssembler::arrays_equals(Register a1, Register a2,
 void C2_MacroAssembler::string_equals(Register a1, Register a2,
                                       Register result, Register cnt1)
 {
-  Label SAME, DONE, SHORT, NEXT_WORD;
+  Label SAME, DONE, SHORT, NEXT_WORD, TAIL03, TAIL01;
   Register tmp1 = t0;
   Register tmp2 = t1;
 
   assert_different_registers(a1, a2, result, cnt1, tmp1, tmp2);
 
+  int base_offset = arrayOopDesc::base_offset_in_bytes(T_BYTE);
+
   BLOCK_COMMENT("string_equals {");
 
   mv(result, false);
 
+  // Load 4 bytes once to compare for alignment before main loop.
+  if ((base_offset % 8) != 0) {
+    addi(cnt1, cnt1, -4);
+    bltz(cnt1, TAIL03);
+    lwu(tmp1, Address(a1));
+    lwu(tmp2, Address(a2));
+    addi(a1, a1, 4);
+    addi(a2, a2, 4);
+    bne(tmp1, tmp2, DONE);
+  }
+
   // Check for short strings, i.e. smaller than wordSize.
   subi(cnt1, cnt1, wordSize);
   bltz(cnt1, SHORT);
+
+#ifdef ASSERT
+  Label align_ok;
+  orr(t0, a1, a2);
+  andi(t0, t0, 0x7);
+  beqz(t0, align_ok);
+  stop("bad alignment");
+  bind(align_ok);
+#endif
 
   // Main 8 byte comparison loop.
   bind(NEXT_WORD); {
@@ -1758,8 +1828,6 @@ void C2_MacroAssembler::string_equals(Register a1, Register a2,
   beqz(tmp1, SAME);
 
   bind(SHORT);
-  Label TAIL03, TAIL01;
-
   // 0-7 bytes left.
   test_bit(tmp1, cnt1, 2);
   beqz(tmp1, TAIL03);
